--- a/trymito.io/styles/Page.module.css
+++ b/trymito.io/styles/Page.module.css
@@ -74,9 +74,13 @@
         flex-basis: 100%;
     }
 
-    /* Make sure there is at least 5rem between divs inside the subsection */
+    /* Make sure there is at space between divs inside the subsection */
     .subsection > div + div {
         margin-left: 5rem;
+    }
+
+    .subsection_narrow_space_betweeen > div + div {
+        margin-left: 2rem;
     }
 
     .subsection_second_element_mobile_spacing {
