--- a/trymito.io/styles/globals.css
+++ b/trymito.io/styles/globals.css
@@ -153,7 +153,8 @@ a {
 }
 
 .display-desktop-only-inline-block,
-.display-desktop-only-flex {
+.display-desktop-only-flex,
+.display-desktop-only-block {
   display: none !important;
 }
 
@@ -219,6 +220,10 @@ a {
 
   .display-desktop-only-inline-block {
     display: inline-block !important;
+  }
+
+  .display-desktop-only-block {
+    display: block !important;
   }
 
   .display-desktop-only-flex {
